--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "duotone-light-sea-syntax",
+  "name": "duotone-bright-sea-syntax",
   "theme": "syntax",
   "version": "0.4.0",
-  "description": "A light blue-green DuoTone syntax theme",
+  "description": "A bright blue-green DuoTone syntax theme",
   "keywords": [
     "light",
     "blue",
