--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "duotone-bright-sea-syntax",
   "theme": "syntax",
   "version": "0.4.0",
-  "description": "A bright blue-green lighter variant of the DuoTone Dark Sea syntax theme",
+  "description": "A bright blue-green variant of the DuoTone Dark Sea syntax theme",
   "keywords": [
     "light",
     "blue",
