One UI integration messages added.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "blue",
     "green",
     "duotone",
-    "syntax"
+    "syntax",
+    "one-ui"
   ],
   "repository": "https://github.com/5310/duotone-bright-sea-syntax",
   "license": "MIT",
