--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "duotone-dark-sea-syntax",
+  "name": "duotone-stark-sea-syntax",
   "theme": "syntax",
   "version": "2.1.0-1",
   "description": "A greyer variant of the blue-green DuoTone Dark Sea syntax theme",
