--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "duotone-bright-sea-syntax",
   "theme": "syntax",
-  "version": "2.1.0",
+  "version": "2.1.0-4",
   "description": "A bright blue-green variant of the DuoTone Dark Sea syntax theme",
   "keywords": [
     "light",
